# jseqio

./: CHANGELOG.md  Cargo.toml  README.md  design.txt
src/: lib.rs  main.rs  reader.rs  record.rs  seq_db.rs  writer.rs
tests/: integration_tests.rs
tests/data/: reads.fastq  reads.fna
