[package]
name = "jseqio"
version = "0.1.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE.txt"
description = "Reading and writing biological sequences in FASTA or FASTQ format."
repository = "https://github.com/jnalanko/jseqio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.24"
ex = "0.1.3"
